Removed increments from task object, present in right click context menu

--- a/UserControls/IndividualTask.xaml
+++ b/UserControls/IndividualTask.xaml
@@ -38,120 +38,9 @@
 
             <StackPanel Orientation="Horizontal" DockPanel.Dock="Right" Margin="0 0 13 0">
 
-                <Label x:Name="DueDateTimeLabel" Foreground="{StaticResource Text}" Opacity="1" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsHitTestVisible="True" Padding="13 0 0 0" MouseEnter="DueDateTimeLabel_MouseEnter" />
+                <Label x:Name="DueDateTimeLabel" Foreground="{StaticResource Text}" Opacity="1" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsHitTestVisible="False" Padding="13 0 0 0"/>
 
-                <StackPanel x:Name="Icons" Orientation="Horizontal" Width="0" HorizontalAlignment="Right" Background="#00000000" Margin="13 0 0 0">
-
-                    <StackPanel x:Name="incrementsPanel" Orientation="Horizontal">
-
-                        <Grid>
-                            <Border x:Name="now" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" IsMouseDirectlyOverChanged="Button_IsMouseDirectlyOverChanged" Width="30" Height="30" MouseDown="Increment_MouseDown">
-                                <Border.ToolTip>
-                                    <ToolTip>
-                                        <ToolTip.Content>
-                                            <StackPanel Orientation="Horizontal">
-                                                <local:ButtonToolTip ToolTipText="Set due datetime to current time" Button1Text="0" CornerRadius="2 0 0 2" BorderPadding="5 5 0 5"/>
-                                                <local:ButtonToolTip ToolTipText="Set due datetime to null" Button1Text="shift" CornerRadius="0" BorderPadding="0 5"/>
-                                                <local:ButtonToolTip ToolTipText="+" Button1Text="0" CornerRadius="0 2 2 0" BorderPadding="2 5 5 5"/>
-                                            </StackPanel>
-                                        </ToolTip.Content>
-                                    </ToolTip>
-                                </Border.ToolTip>
-                            </Border>
-                            <Label Content="Now" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" FontSize="9" Foreground="{StaticResource Text}" HorizontalAlignment="Center" VerticalAlignment="Center" IsHitTestVisible="False" />
-                        </Grid>
-
-                        <Grid Margin="5 0 0 0">
-                            <Border x:Name="plus1m" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" IsMouseDirectlyOverChanged="Button_IsMouseDirectlyOverChanged" Width="30" Height="30" MouseDown="Increment_MouseDown">
-                                <Border.ToolTip>
-                                    <ToolTip>
-                                        <ToolTip.Content>
-                                            <local:ButtonToolTip ToolTipText="Add 1 minute to due datetime" Button1Text="1" />
-                                        </ToolTip.Content>
-                                    </ToolTip>
-                                </Border.ToolTip>
-                            </Border>
-                            <Label Content="+1m" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" FontSize="9" Foreground="{StaticResource Text}" HorizontalAlignment="Center" VerticalAlignment="Center" IsHitTestVisible="False" />
-                        </Grid>
-
-                        <Grid Margin="5 0 0 0">
-                            <Border x:Name="plus5m" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" IsMouseDirectlyOverChanged="Button_IsMouseDirectlyOverChanged" Width="30" Height="30" MouseDown="Increment_MouseDown">
-                                <Border.ToolTip>
-                                    <ToolTip>
-                                        <ToolTip.Content>
-                                            <local:ButtonToolTip ToolTipText="Add 5 minutes to due datetime" Button1Text="5" />
-                                        </ToolTip.Content>
-                                    </ToolTip>
-                                </Border.ToolTip>
-                            </Border>
-                            <Label Content="+5m" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" FontSize="9" Foreground="{StaticResource Text}" HorizontalAlignment="Center" VerticalAlignment="Center" IsHitTestVisible="False" />
-                        </Grid>
-
-                        <Grid Margin="5 0 0 0">
-                            <Border x:Name="plus30m" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" IsMouseDirectlyOverChanged="Button_IsMouseDirectlyOverChanged" Width="30" Height="30" MouseDown="Increment_MouseDown">
-                                <Border.ToolTip>
-                                    <ToolTip>
-                                        <ToolTip.Content>
-                                            <local:ButtonToolTip ToolTipText="Add 30 minutes to due datetime" Button1Text="3" />
-                                        </ToolTip.Content>
-                                    </ToolTip>
-                                </Border.ToolTip>
-                            </Border>
-                            <Label Content="+30m" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" FontSize="9" Foreground="{StaticResource Text}" HorizontalAlignment="Center" VerticalAlignment="Center" IsHitTestVisible="False" />
-                        </Grid>
-
-                        <Grid Margin="5 0 0 0">
-                            <Border x:Name="plus1h" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" IsMouseDirectlyOverChanged="Button_IsMouseDirectlyOverChanged" Width="30" Height="30" MouseDown="Increment_MouseDown">
-                                <Border.ToolTip>
-                                    <ToolTip>
-                                        <ToolTip.Content>
-                                            <local:ButtonToolTip ToolTipText="Add 1 hour to due datetime" Button1Text="4" />
-                                        </ToolTip.Content>
-                                    </ToolTip>
-                                </Border.ToolTip>
-                            </Border>
-                            <Label Content="+1h" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" FontSize="9" Foreground="{StaticResource Text}" HorizontalAlignment="Center" VerticalAlignment="Center" IsHitTestVisible="False" />
-                        </Grid>
-
-                        <Grid Margin="5 0 0 0">
-                            <Border x:Name="plus6h" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" IsMouseDirectlyOverChanged="Button_IsMouseDirectlyOverChanged" Width="30" Height="30" MouseDown="Increment_MouseDown">
-                                <Border.ToolTip>
-                                    <ToolTip>
-                                        <ToolTip.Content>
-                                            <local:ButtonToolTip ToolTipText="Add 6 hours to due datetime" Button1Text="6" />
-                                        </ToolTip.Content>
-                                    </ToolTip>
-                                </Border.ToolTip>
-                            </Border>
-                            <Label Content="+6h" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" FontSize="9" Foreground="{StaticResource Text}" HorizontalAlignment="Center" VerticalAlignment="Center" IsHitTestVisible="False" />
-                        </Grid>
-
-                        <Grid Margin="5 0 0 0">
-                            <Border x:Name="plus1d" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" IsMouseDirectlyOverChanged="Button_IsMouseDirectlyOverChanged" Width="30" Height="30" MouseDown="Increment_MouseDown">
-                                <Border.ToolTip>
-                                    <ToolTip>
-                                        <ToolTip.Content>
-                                            <local:ButtonToolTip ToolTipText="Add 1 day to due datetime" Button1Text="8" />
-                                        </ToolTip.Content>
-                                    </ToolTip>
-                                </Border.ToolTip>
-                            </Border>
-                            <Label Content="+1d" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" FontSize="9" Foreground="{StaticResource Text}" HorizontalAlignment="Center" VerticalAlignment="Center" IsHitTestVisible="False" />
-                        </Grid>
-
-                        <Grid Margin="5 0 13 0">
-                            <Border x:Name="plus1w" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" IsMouseDirectlyOverChanged="Button_IsMouseDirectlyOverChanged" Width="30" Height="30" MouseDown="Increment_MouseDown">
-                                <Border.ToolTip>
-                                    <ToolTip>
-                                        <ToolTip.Content>
-                                            <local:ButtonToolTip ToolTipText="Add 1 week to due datetime" Button1Text="7" />
-                                        </ToolTip.Content>
-                                    </ToolTip>
-                                </Border.ToolTip>
-                            </Border>
-                            <Label Content="+1w" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" FontSize="9" Foreground="{StaticResource Text}" HorizontalAlignment="Center" VerticalAlignment="Center" IsHitTestVisible="False" />
-                        </Grid>
-                    </StackPanel>
+                <StackPanel x:Name="Icons" Orientation="Horizontal" Width="0" HorizontalAlignment="Right" Background="Transparent" Margin="13 0 0 0">
 
                     <local:IconButton x:Name="EditIcon" SVGSource="{StaticResource pencilIcon}" Width="30" Height="30" MouseDown="EditIcon_MouseDown">
                         <local:IconButton.ToolTip>
@@ -179,6 +68,7 @@
                         </local:IconButton.ToolTip>
                     </local:IconButton>
                 </StackPanel>
+                
             </StackPanel>
 
             <Grid DockPanel.Dock="Left">
