--- a/Pages/EditTaskPage.xaml
+++ b/Pages/EditTaskPage.xaml
@@ -29,7 +29,7 @@
 
                         <Grid>
                             <Label Content="Task Name" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Padding="0"/>
-                            <Line x:Name="L1" Stroke="{StaticResource Text}" X2="7" Margin="28.5 14 0 0"/>
+                            <Line x:Name="L1" Stroke="{StaticResource Text}" X2="7" Margin="28.5 14 0 0" Visibility="Collapsed"/>
                         </Grid>
 
                         <Grid Margin="0 5 0 0" Height="40">
@@ -53,7 +53,7 @@
 
                             <Grid>
                                 <Label Content="Date" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Margin="0 0 0 5" Padding="0"/>
-                                <Line x:Name="L2" Stroke="{StaticResource Text}" X2="7" Margin="0 14 0 0"/>
+                                <Line x:Name="L2" Stroke="{StaticResource Text}" X2="7" Margin="0 14 0 0" Visibility="Collapsed"/>
                             </Grid>
                             
                             <Grid Height="40">
@@ -77,7 +77,7 @@
 
                             <Grid>
                                 <Label Content="Time" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Padding="0" Margin="0 0 0 5"/>
-                                <Line x:Name="L3" Stroke="{StaticResource Text}" X2="7" Margin="0 14 0 0"/>
+                                <Line x:Name="L3" Stroke="{StaticResource Text}" X2="7" Margin="0 14 0 0" Visibility="Collapsed"/>
                             </Grid>
 
                             <Grid>
@@ -96,7 +96,7 @@
 
                         <Grid>
                             <Label Content="Tags" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Padding="0"/>
-                            <Line x:Name="L4" Stroke="{StaticResource Text}" X2="7" Margin="13 14 0 0"/>
+                            <Line x:Name="L4" Stroke="{StaticResource Text}" X2="7" Margin="13 14 0 0" Visibility="Collapsed"/>
                         </Grid>
 
                         <Grid Margin="0 5 0 0" Height="40">
@@ -125,7 +125,7 @@
 
                                 <Grid>
                                     <Label Content="High Priority" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Padding="0" VerticalAlignment="Center"/>
-                                    <Line x:Name="L5" Stroke="{StaticResource Text}" X2="6" Margin="28 26 0 0"/>
+                                    <Line x:Name="L5" Stroke="{StaticResource Text}" X2="6" Margin="28 26 0 0" Visibility="Collapsed"/>
                                 </Grid>
 
                                 <Border BorderBrush="{StaticResource CheckBox}" BorderThickness="2" CornerRadius="2" HorizontalAlignment="Center" Width="14" Height="14" Margin="10 0 0 0">
