--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Name="HomePagePage" x:Class="TemporaTasks.Pages.HomePage"
+﻿<Page x:Name="homePage" x:Class="TemporaTasks.Pages.HomePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -34,7 +34,7 @@
 
             <Image Source="{StaticResource miniIcon}" Width="20" Height="20" VerticalAlignment="Top" Margin="0 60 0 0"/>
 
-            <DockPanel HorizontalAlignment="Center" Margin="20 110 20 30">
+            <DockPanel HorizontalAlignment="Center" Margin="20 110 20 20">
 
                 <StackPanel DockPanel.Dock="Top">
                     <Grid>
@@ -76,7 +76,7 @@
                             </Border.ToolTip>
                         </Border>
                         <Grid x:Name="NotifGrid" IsHitTestVisible="False" RenderTransformOrigin="0.5, 0.5">
-                            <Image x:Name="NotifIcon" Source="{StaticResource bellIcon}" MaxWidth="15" MaxHeight="15" Opacity="0.25"/>
+                            <Image x:Name="NotifIcon" Source="{StaticResource bellIcon}" Width="15" Height="15" Opacity="0.25"/>
                             <Line x:Name="notifLine" X2="12" Y2="12" Stroke="{StaticResource PastDue}" StrokeStartLineCap="Round" StrokeEndLineCap="Round" StrokeThickness="2" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="1 2 0 0" Opacity="0"/>
                             <Grid x:Name="notifLineHP" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10 3 0 0" Opacity="0">
                                 <Line Y2="8" Stroke="{StaticResource HighPriority}" StrokeStartLineCap="Round" StrokeEndLineCap="Round" StrokeThickness="2"/>
