--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -59,11 +59,18 @@
                     </Grid>
                 </StackPanel>
 
-                <!--<StackPanel DockPanel.Dock="Bottom" VerticalAlignment="Bottom">
-                </StackPanel>-->
-
-            </DockPanel>
-
+                <StackPanel DockPanel.Dock="Bottom" VerticalAlignment="Bottom">
+                    <Grid Height="40">
+                        <Border x:Name="EyeButton" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" Cursor="Hand" Width="40" IsMouseDirectlyOverChanged="EyeButton_IsMouseDirectlyOverChanged" MouseDown="EyeButton_MouseDown">
+                            <Border.ToolTip>
+                                <ToolTip>
+                                    <ToolTip.Content>
+                                        <userControl:ButtonToolTip ToolTipText="Toggle between mute states" Button1Text="m"/>
+                                    </ToolTip.Content>
+                                </ToolTip>
+                            </Border.ToolTip>
+                        </Border>
+                        <Image x:Name="EyeIcon" Source="{StaticResource NoneEyeIcon}" Opacity="0.25" IsHitTestVisible="False" RenderTransformOrigin="0.5, 0.5" Width="15" Height="15"/>
         </Grid>
                     <Grid Height="40" Margin="0 5 0 0">
                         <Border x:Name="NotifButton" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" Cursor="Hand" Width="40" IsMouseDirectlyOverChanged="NotifButton_IsMouseDirectlyOverChanged" MouseDown="NotifButton_MouseDown">
@@ -84,6 +91,11 @@
                             </Grid>
                         </Grid>
                     </Grid>
+                </StackPanel>
+
+            </DockPanel>
+
+        </Grid>
 
         <Grid x:Name="MainGrid" Margin="50 0 50 0">
 
