--- a/Resources/Dictionaries/Icons.xaml
+++ b/Resources/Dictionaries/Icons.xaml
@@ -31,6 +31,25 @@
         </DrawingImage.Drawing>
     </DrawingImage>
 
+    <DrawingImage x:Key="redTrashIcon">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V24 H24 V0 H0 Z">
+                <DrawingGroup Opacity="1">
+                    <GeometryDrawing Brush="{StaticResource PastDue}" Geometry="F1 M24,24z M0,0z M8,1.5L8,2.5 3,2.5C2.44772,2.5,2,2.94772,2,3.5L2,4.5C2,5.05228,2.44772,5.5,3,5.5L21,5.5C21.5523,5.5,22,5.05228,22,4.5L22,3.5C22,2.94772,21.5523,2.5,21,2.5L16,2.5 16,1.5C16,0.947715,15.5523,0.5,15,0.5L9,0.5C8.44772,0.5,8,0.947715,8,1.5z">
+                        <GeometryDrawing.Pen>
+                            <Pen Brush="{StaticResource PastDue}" Thickness="1" StartLineCap="Flat" EndLineCap="Flat" LineJoin="Miter" />
+                        </GeometryDrawing.Pen>
+                    </GeometryDrawing>
+                    <GeometryDrawing Brush="{StaticResource PastDue}" Geometry="F1 M24,24z M0,0z M3.9231,7.5L20.0767,7.5 19.1344,20.2216C19.0183,21.7882,17.7135,23,16.1426,23L7.85724,23C6.28636,23,4.98148,21.7882,4.86544,20.2216L3.9231,7.5z">
+                        <GeometryDrawing.Pen>
+                            <Pen Brush="{StaticResource PastDue}" Thickness="1" StartLineCap="Flat" EndLineCap="Flat" LineJoin="Miter" />
+                        </GeometryDrawing.Pen>
+                    </GeometryDrawing>
+                </DrawingGroup>
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
     <DrawingImage x:Key="backIcon">
         <DrawingImage.Drawing>
             <DrawingGroup ClipGeometry="M0,0 V1024 H1024 V0 H0 Z">
@@ -198,6 +217,54 @@
                 <DrawingGroup Opacity="1">
                     <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F1 M52,52z M0,0z M24.8,13.6C24.8,14.6,25.6,15.5,26.7,15.5L31.3,15.5C32.3,15.5,33.2,14.7,33.2,13.6L33.2,4 24.9,4 24.8,13.6 24.8,13.6z" />
                 </DrawingGroup>
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
+    <!--https://www.svgrepo.com/svg/502655/eye-off-->
+
+    <DrawingImage x:Key="TempGarbleOnEyeIcon">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V24 H24 V0 H0 Z">
+                <GeometryDrawing Geometry="F1 M24,24z M0,0z M4,4L20,20">
+                    <GeometryDrawing.Pen>
+                        <Pen Brush="{StaticResource Icons}" Thickness="2" StartLineCap="Round" EndLineCap="Round" LineJoin="Miter" MiterLimit="1" />
+                    </GeometryDrawing.Pen>
+                </GeometryDrawing>
+                <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F0 M24,24z M0,0z M6.22308,5.63732C4.19212,6.89322 2.60069,8.79137 1.73175,11.0474 1.49567,11.6604 1.49567,12.3396 1.73175,12.9526 3.31889,17.0733 7.31641,20 12,20 14.422,20 16.6606,19.2173 18.4773,17.8915L17.042,16.4562C15.6033,17.4309 13.8678,18 12,18 8.17084,18 4.89784,15.6083 3.5981,12.2337 3.54022,12.0835 3.54022,11.9165 3.5981,11.7663 4.36731,9.76914 5.82766,8.11625 7.6854,7.09964L6.22308,5.63732z M9.47955,8.89379C8.5768,9.6272 7.99997,10.7462 7.99997,12 7.99997,14.2091 9.79083,16 12,16 13.2537,16 14.3728,15.4232 15.1062,14.5204L13.6766,13.0908C13.3197,13.6382 12.7021,14 12,14 10.8954,14 9.99997,13.1046 9.99997,12 9.99997,11.2979 10.3618,10.6802 10.9091,10.3234L9.47955,8.89379z M15.9627,12.5485L11.4515,8.03729C11.6308,8.0127 11.8139,8 12,8 14.2091,8 16,9.79086 16,12 16,12.1861 15.9873,12.3692 15.9627,12.5485z M18.5678,15.1536C19.3538,14.3151 19.9812,13.3259 20.4018,12.2337 20.4597,12.0835 20.4597,11.9165 20.4018,11.7663 19.1021,8.39172 15.8291,6 12,6 11.2082,6 10.4402,6.10226 9.70851,6.29433L8.11855,4.70437C9.32541,4.24913 10.6335,4 12,4 16.6835,4 20.681,6.92668 22.2682,11.0474 22.5043,11.6604 22.5043,12.3396 22.2682,12.9526 21.7464,14.3074 20.964,15.5331 19.9824,16.5682L18.5678,15.1536z" />
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
+    <!--https://www.svgrepo.com/svg/502656/eye-->
+    
+    <DrawingImage x:Key="TempGarbleOffEyeIcon">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V24 H24 V0 H0 Z">
+                <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F1 M24,24z M0,0z M21.335,11.4069L22.2682,11.0474 21.335,11.4069z M21.335,12.5932L20.4018,12.2337 21.335,12.5932z M2.66492,11.4068L1.73175,11.0474 2.66492,11.4068z M2.66492,12.5932L1.73175,12.9526 2.66492,12.5932z M3.5981,11.7663C4.89784,8.39171,8.17084,6,12,6L12,4C7.31641,4,3.31889,6.92667,1.73175,11.0474L3.5981,11.7663z M12,6C15.8291,6,19.1021,8.39172,20.4018,11.7663L22.2682,11.0474C20.681,6.92668,16.6835,4,12,4L12,6z M20.4018,12.2337C19.1021,15.6083,15.8291,18,12,18L12,20C16.6835,20,20.681,17.0733,22.2682,12.9526L20.4018,12.2337z M12,18C8.17084,18,4.89784,15.6083,3.5981,12.2337L1.73175,12.9526C3.31889,17.0733,7.31641,20,12,20L12,18z M20.4018,11.7663C20.4597,11.9165,20.4597,12.0835,20.4018,12.2337L22.2682,12.9526C22.5043,12.3396,22.5043,11.6604,22.2682,11.0474L20.4018,11.7663z M1.73175,11.0474C1.49567,11.6604,1.49567,12.3396,1.73175,12.9526L3.5981,12.2337C3.54022,12.0835,3.54022,11.9165,3.5981,11.7663L1.73175,11.0474z" />
+                <GeometryDrawing>
+                    <GeometryDrawing.Pen>
+                        <Pen Brush="{StaticResource Icons}" Thickness="2" StartLineCap="Round" EndLineCap="Round" LineJoin="Round" MiterLimit="1" />
+                    </GeometryDrawing.Pen>
+                    <GeometryDrawing.Geometry>
+                        <EllipseGeometry RadiusX="3" RadiusY="3" Center="12,12" />
+                    </GeometryDrawing.Geometry>
+                </GeometryDrawing>
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
+    <DrawingImage x:Key="NoneEyeIcon">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V800 H800 V0 H0 Z">
+                <DrawingGroup Opacity="1">
+                    <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F1 M800,800z M0,0z M602.5,267.7C595.6,267.7 588.7,265.5 582.8,261 543,230.5 496,210.4 446.7,202.7 429,199.9 416.8,183.3 419.6,165.6 422.4,147.9 439,135.7 456.7,138.5 516.7,147.8 574,172.4 622.4,209.4 636.6,220.3 639.3,240.7 628.4,255 621.9,263.4 612.3,267.7 602.5,267.7z M197.5,267.7C187.7,267.7 178.1,263.3 171.7,255 160.8,240.8 163.5,220.4 177.7,209.4 226.1,172.4 283.4,147.8 343.4,138.5 361.1,135.7 377.7,147.9 380.5,165.6 383.3,183.3 371.1,199.9 353.4,202.7 304.1,210.4 257,230.5 217.3,261 211.4,265.5 204.4,267.7 197.5,267.7z" />
+                </DrawingGroup>
+                <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F1 M800,800z M0,0z M152.8,471.5C139.1,451.8 127.7,430.4 119.1,408.1 118.1,405.5 117.6,402.8 117.6,400 117.6,397.2 118.1,394.5 119.1,391.9 127.7,369.5 139,348.2 152.8,328.5 163,313.8 159.4,293.5 144.7,283.3 130,273.1 109.7,276.7 99.5,291.4 82.8,315.4 69,341.4 58.5,368.6 54.6,378.7 52.7,389.3 52.7,400.1 52.7,410.9 54.7,421.5 58.5,431.6 69,458.8 82.8,484.8 99.5,508.8 105.8,517.9 115.9,522.7 126.2,522.7 132.6,522.7 139.1,520.8 144.7,516.9 159.4,506.5 163.1,486.3 152.8,471.5z" />
+                <DrawingGroup Opacity="1">
+                    <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F1 M800,800z M0,0z M451.6,661.9C435.9,661.9 422,650.4 419.5,634.4 416.7,616.7 428.9,600.1 446.6,597.3 495.9,589.6 543,569.5 582.7,539 596.9,528.1 617.3,530.8 628.3,545 639.3,559.2 636.5,579.6 622.3,590.6 573.9,627.6 516.6,652.2 456.6,661.5 454.9,661.7 453.2,661.9 451.6,661.9z M348.4,661.9C346.7,661.9 345.1,661.8 343.4,661.5 283.4,652.2 226.1,627.6 177.7,590.6 163.5,579.7 160.8,559.3 171.7,545 182.6,530.8 203,528.1 217.3,539 257.1,569.5 304.1,589.6 353.4,597.3 371.1,600.1 383.3,616.7 380.5,634.4 378,650.4 364.1,661.9 348.4,661.9z" />
+                </DrawingGroup>
+                <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F1 M800,800z M0,0z M741.5,368.5C731,341.3 717.2,315.3 700.5,291.3 690.3,276.6 670,272.9 655.3,283.2 640.6,293.4 636.9,313.7 647.2,328.4 660.9,348.1 672.3,369.5 680.9,391.8 681.9,394.4 682.4,397.1 682.4,399.9 682.4,402.7 681.9,405.4 680.9,408 672.3,430.4 661,451.7 647.2,471.4 637,486.1 640.6,506.4 655.3,516.6 661,520.5 667.4,522.4 673.8,522.4 684.1,522.4 694.2,517.5 700.5,508.5 717.2,484.5 731,458.5 741.5,431.3 745.4,421.2 747.3,410.6 747.3,399.8 747.3,389.2 745.4,378.6 741.5,368.5z" />
             </DrawingGroup>
         </DrawingImage.Drawing>
     </DrawingImage>
