--- a/Resources/Dictionaries/ToolTips.xaml
+++ b/Resources/Dictionaries/ToolTips.xaml
@@ -7,4 +7,8 @@
         <Setter Property="BorderThickness" Value="0"/>
     </Style>
 
+    <Style TargetType="Border">
+        <Setter Property="ToolTipService.InitialShowDelay" Value="3000"/>
+    </Style>
+
 </ResourceDictionary>
